--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,9 @@
 <body>
 
     <header>
-        <a class="nav-logo" href="{{ url_for('home')}}">Cas Obdam</a>
+        <a class="nav-logo" href="{{ url_for('home')}}">
+            <img src="{{ url_for('static', filename='images/StrandwalStudios.svg') }}" alt="JotaCross 2022 Logo">
+        </a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn">
             <span class="navicon" />
