--- a/templates/main.html
+++ b/templates/main.html
@@ -20,8 +20,8 @@
             <span class="navicon" />
         </label>
         <nav class="menu">
-            <a href="#">About</a>
-            <a href="#">Blog</a>
+            <a href="#">Inschrijven</a>
+            <a href="#">Nieuws</a>
         </nav>
     </header>
 
