--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,19 @@
-{% extends "main.html" %}
-{% block content %}
-<h1>{% block title %} Posts {% endblock %}</h1>
+{% extends "main.html" %} {% block content %}
+<h1>JotaCross 2022</h1>
+<p>
+    Op 22 oktober 2022 is het zover! Ga mee naar het sprookjesland van Noord-Holland: Akersloot! Tijdens deze doldwaze avond zal Scouting Akersloot de Strandwal ombouwen tot het majestueuze Strandwal Studios, de plek waar dromen worden gerealiseerd ✨.
+</p>
+
+<p>
+    Denk aan koning worden van alle dieren, vinden van hét glazen muiltje of toch het oord waar speelgoed tot leven komt. Je moet op 22 oktober één ding niet vergeten: <i>never grow up</i>…
+</p>
+
+<h2>Excel-ereren</h2>
+<p>Kan je nou echt niet wachten om de magische wereld van de JotaCross 2022 te betreden? Calculeer hier dan je eigen uitslag!</p>
+<iframe class="uitslag" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQStRfdMBfCSI8LcrMd3tLo07olGRoGeJ8KXCWNhyzr3VZTXug9KV09evwyNtThEBPFH3ZTgOUVWjR8/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
+
+<!-- <h1>{% block title %} Posts {% endblock %}</h1>
 <p>We love us some posts!</p>
 <ul>
     {% for article in articles %}
@@ -10,5 +23,5 @@
     {% else %}
     <li>No articles so far</li>
     {% endfor %}
-</ul>
+</ul> -->
 {% endblock content %}
