--- a/templates/home.html
+++ b/templates/home.html
@@ -9,14 +9,15 @@
 </p>
 
 <h2>Excel-ereren</h2>
-<p>Kan je nou echt niet wachten om de magische wereld van de JotaCross 2022 te betreden? Calculeer hier dan je eigen uitslag!</p>
-<iframe class="uitslag" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQStRfdMBfCSI8LcrMd3tLo07olGRoGeJ8KXCWNhyzr3VZTXug9KV09evwyNtThEBPFH3ZTgOUVWjR8/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<p>Kan je nou echt niet wachten om de magische wereld van de JotaCross 2022 te betreden? Calculeer hier dan je eigen uitslag!
+</p>
+<iframe class="uitslag" src="https://docs.google.com/spreadsheets/d/1mO-HqwlJEnv41-vgDOYc8ERJxUDEFUXUFlTWJQDz7y8/edit?usp=sharing?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 
 <!-- <h1>{% block title %} Posts {% endblock %}</h1>
 <p>We love us some posts!</p>
 <ul>
-    {% for article in articles %}
+    {% for article in articles %}   
     <li>
         <a href="{{ url_for('articles', name=article.path) }}">{{ article.title }}</a>
     </li>
