--- a/docs/static/css/stylesheet.css
+++ b/docs/static/css/stylesheet.css
@@ -183,7 +183,7 @@ main article p {
 
 .uitslag {
     max-width: inherit;
-    max-height: inherit;
+    height: 500px;
     margin: auto;
     width: 100%;
 }
