--- a/templates/main.html
+++ b/templates/main.html
@@ -15,14 +15,14 @@
         <a class="nav-logo" href="{{ url_for('home')}}">
             <img src="{{ url_for('static', filename='images/StrandwalStudios.svg') }}" alt="JotaCross 2022 Logo">
         </a>
-        <!-- <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn">
             <span class="navicon" />
-        </label> -->
-        <!-- <nav class="menu">
+        </label>
+        <nav class="menu">
             <a href="#">Inschrijven</a>
             <a href="#">Nieuws</a>
-        </nav> -->
+        </nav>
     </header>
 
     <main>
