--- a/templates/main.html
+++ b/templates/main.html
@@ -33,6 +33,23 @@
 
     <footer>
         <p>&#169; Designed in Akersloot - 2021/2022 - All Rights Reserved</p>
+        <ul class="social-footer">
+            <li>
+                <a href="https://www.facebook.com/jotacross2022" target="_blank">
+                    <img src="{{ url_for('static', filename='images/social_facebook.svg') }}" alt="Feesboek">
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/Jotacross22" target="_blank">
+                    <img src="{{ url_for('static', filename='images/social_twitter.svg') }}" alt="Twitter">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/jotacross22/" target="_blank">
+                    <img src="{{ url_for('static', filename='images/social_instagram.svg') }}" alt="Instagram">
+                </a>
+            </li>
+        </ul>
     </footer>
 </body>
 
