--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,33 @@
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %} 
+{% block content %}
 <h1>{% block title %} JotaCross 2022 {% endblock %}</h1>
 <p>
-    Op 15 oktober 2022 is het zover! Ga mee naar het sprookjesland van Noord-Holland: Akersloot! Tijdens deze doldwaze avond zal Scouting Akersloot de Strandwal ombouwen tot het majestueuze Strandwal Studios, de plek waar dromen worden gerealiseerd ✨.
+    Op 15 oktober 2022 is het zover! Ga mee naar het sprookjesland van Noord-Holland: Akersloot! Tijdens deze doldwaze
+    avond zal Scouting Akersloot de Strandwal ombouwen tot het majestueuze Strandwal Studios, de plek waar dromen worden
+    gerealiseerd ✨.
 </p>
 
 <p>
-    Denk aan koning worden van alle dieren, vinden van hét glazen muiltje of toch het oord waar speelgoed tot leven komt. Je moet op 22 oktober één ding niet vergeten: <i>never grow up</i>…
+    Denk aan koning worden van alle dieren, vinden van hét glazen muiltje of toch het oord waar speelgoed tot leven
+    komt. Je moet op 22 oktober één ding niet vergeten: <i>never grow up</i>…
 </p>
 
 <h2>Excel-ereren</h2>
-<p>Kan je nou echt niet wachten om de magische wereld van de JotaCross 2022 te betreden? Calculeer hier dan je eigen uitslag!
+<p>Kan je nou echt niet wachten om de magische wereld van de JotaCross 2022 te betreden? Calculeer hier dan je eigen
+    uitslag!
 </p>
-<iframe class="uitslag" src="https://docs.google.com/spreadsheets/d/1mO-HqwlJEnv41-vgDOYc8ERJxUDEFUXUFlTWJQDz7y8/edit?usp=sharing?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe> {% endblock content %}
+<iframe class="uitslag"
+    src="https://docs.google.com/spreadsheets/d/1mO-HqwlJEnv41-vgDOYc8ERJxUDEFUXUFlTWJQDz7y8/edit?usp=sharing?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
+<h2>Nieuws</h2>
+<p>We love us some posts!</p>
+<ul>
+    {% for article in articles %}   
+    <li>
+        <a href="{{ url_for('articles', name=article.path) }}">{{ article.title }}</a>
+    </li>
+    {% else %}
+    <li>No articles so far</li>
+    {% endfor %}
+</ul>
+{% endblock content %}
