--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}">
-    <title> {% block title %}{% endblock %}</title>
+    <title> {% block title %}{% endblock %} - JotaCross 2022</title>
 </head>
 
 <body>
