--- a/templates/home.html
+++ b/templates/home.html
@@ -13,12 +13,15 @@
 </p>
 <h2>Nieuws</h2>
 {% for article in articles %}
-
-<a class="article-preview" href="{{ url_for('articles', name=article.path) }}">
-    <h3>{{ article.title }}</h3>
-    <p>{{ article.teaser }}</p>
-</a>
-
+<section class="article-preview">
+    <a href="{{ url_for('articles', name=article.path) }}">
+        <h3>{{ article.title }}</h3>
+        <p><i>{{ article.teaser }}</i></p>
+        {% if not loop.last %}
+        <hr>
+        {% endif %}
+    </a>
+</section>
 {% endfor %}
 
 <h2>Excel-ereren</h2>
