--- a/templates/main.html
+++ b/templates/main.html
@@ -21,7 +21,7 @@
         </label>
         <nav class="menu">
             <!-- <a href="#">Inschrijven</a> -->
-            <a href="{{ url_for('nieuws')}}">Nieuws</a>
+            <!-- <a href="{{ url_for('nieuws')}}">Nieuws</a> -->
         </nav>
     </header>
 
