--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -185,6 +185,12 @@ main article p {
     font-size: 1.10rem;
 }
 
+main article img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 1.5rem;
+}
+
 .article-preview {
     padding: 0.5rem;
 }
