--- a/templates/home.html
+++ b/templates/home.html
@@ -33,10 +33,11 @@
     Vanaf 1 juni is de inschrijving voor de JotaCross 2022 geopend! Je vindt het inschrijfforumulier hier:
 </p>
 
-
 <a href="https://forms.gle/kvLMFYtiYdJzV2aF6" target="_blank">
     <button type="button" class="button-normal">
         Inschrijven!
     </button>
 </a>
+
+<img src="{{ url_for('static', filename='images/onward-filmposter.png') }}" alt="film-poster-jota">
 {% endblock content %}
