--- a/templates/home.html
+++ b/templates/home.html
@@ -30,14 +30,12 @@
 
 <h2>Inschrijving</h2>
 <p>
-    Vanaf 1 juni is de inschrijving voor de JotaCross 2022 geopend! Je vindt het inschrijfforumulier hier:
+    Vanaf 1 juni is de inschrijving voor de JotaCross 2022 geopend! Je vindt het inschrijf forumulier hier:
 </p>
 
-<a href="https://forms.gle/kvLMFYtiYdJzV2aF6" target="_blank">
-    <button type="button" class="button-normal">
-        Inschrijven!
-    </button>
-</a>
+<button type="button" class="button-normal">
+    <a href="https://forms.gle/kvLMFYtiYdJzV2aF6" target="_blank">Inschrijven!</a>
+</button>
 
 <img src="{{ url_for('static', filename='images/onward-filmposter.png') }}" alt="film-poster-jota">
 {% endblock content %}
